src/scss/pages/_joinStaff.scss
// Card
.move-card {
	padding-left: 400px;
}

// Spacing
.columns-spacing {
	padding-left: 30px;
}
 
.sep-cards {
	padding-bottom: 30px;
}

.staff-page-bottom-space {
	padding-bottom: 386px;
}

// Divider
.card-divider {
	border: 1px solid $brandBlue;
	margin-top: 7px;
	margin-bottom: 7px;
}

// Title
.title-font {
	font-weight: bold;
	font-size: 16px;
	color: $brandBlue;
	display: inline-block;
	padding: 30px;
	padding-left: 43px;
}

.title-line {
	display: inline;
}

.title-spacing {
	display: inline;
	padding-top: 30px;
}

.add-button {
	background-color: $blue;
	color: white;
	font-weight: bold;
	text-align: center;
	border-radius: 20px;
	padding: 8px;
	padding-left: 10px;
	padding-right: 10px;
}

